--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </p>
         <div class="main-btn">
           <a href="#About" class="btn">About me</a>
-          <a href="NORBE_MAUREN_RESUME.pdf" download="NORBE_MAUREN_RESUME.pdf" class="btn two">Download Resume</a>
+          <a href="RESUME_APPLICANT.pdf" download="RESUME_APPLICANT.pdf" class="btn two">Download Resume</a>
         </div>
       </div>
       <div class="home-img">
