--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
           <div class="certification-images">
              <img src="cert_1.png" alt="Certification 1" onclick="openModal('cert_1.png')">
             <img src="cert_2.png" alt="Certification 2" onclick="openModal('cert_2.png')">
+            <img src="cert_comphard.png" alt="Certification 3" onclick="openModal('cert_comphard.png')">
+            <img src="cert_cyber.png" alt="Certification 4" onclick="openModal('cert_cyber.png')">
            </div>
         </div>
          
