--- a/index.html
+++ b/index.html
@@ -86,15 +86,13 @@
             </div>
             <div class="certifications">
                 <h3>Certifications</h3>
-                <div class="certification-slider">
-                    <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+                <div class="certification-album">
                     <div class="certification-images">
                         <img class="cert-slide" src="cert_1.png" alt="Certification 1">
                         <img class="cert-slide" src="cert_2.png" alt="Certification 2">
                         <img class="cert-slide" src="cert_comphard.png" alt="Certification 3">
                         <img class="cert-slide" src="cert_cyber.png" alt="Certification 4">
                     </div>
-                    <button class="next" onclick="moveSlide(1)">&#10095;</button>
                 </div>
             </div>
         </div>
